# bip39-blasting

./: .env.example  .gitignore  Cargo.toml  README.md
src/: contract.rs  lib.rs  log.rs  main.rs  mnemonic.rs  net_url.rs  write.rs
